解决配件库的业务逻辑bug,实现两个tableV的数据正常倒换,保存实现缓存传值

--- a/OpticalValleyUnite/Classes/UI/WorkOrder/View/YQPartDataCell.xib
+++ b/OpticalValleyUnite/Classes/UI/WorkOrder/View/YQPartDataCell.xib
@@ -70,6 +70,9 @@
                         <nil key="textColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
+                        <connections>
+                            <outlet property="delegate" destination="-1" id="k5A-tM-JiR"/>
+                        </connections>
                     </textField>
                 </subviews>
                 <constraints>
