完善消防界面中的执行反馈的添加personList,post接口调用,页面添加OK

--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/View/YQFalsePositive.xib
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/View/YQFalsePositive.xib
@@ -124,6 +124,7 @@
             </constraints>
             <connections>
                 <outlet property="addNameTextField" destination="NMs-Ff-9kQ" id="rIz-8V-0fz"/>
+                <outlet property="proofPictureAddView" destination="weP-KY-KeG" id="Cd2-5g-FMI"/>
                 <outlet property="reasonTextField" destination="LYL-nJ-cgt" id="DpB-YO-dT6"/>
             </connections>
             <point key="canvasLocation" x="-158.5" y="49.5"/>
