--- a/OpticalValleyUnite/Classes/UI/WorkOrder/View/ExecutEmergencyCell.xib
+++ b/OpticalValleyUnite/Classes/UI/WorkOrder/View/ExecutEmergencyCell.xib
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="242" id="snk-uX-kg1" customClass="ExecutEmergencyCell" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="385" height="242"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="325" id="snk-uX-kg1" customClass="ExecutEmergencyCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="409" height="325"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="snk-uX-kg1" id="bih-CF-9bc">
-                <rect key="frame" x="0.0" y="0.0" width="385" height="241.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="409" height="324.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" placeholderIntrinsicWidth="336" placeholderIntrinsicHeight="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="w4B-bk-YD5">
-                        <rect key="frame" x="39" y="0.0" width="346" height="231.5"/>
+                        <rect key="frame" x="39" y="0.0" width="370" height="314.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已执行" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VbS-Gq-acs">
                                 <rect key="frame" x="12" y="10" width="46" height="18"/>
@@ -31,13 +31,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016-11-11     16:48:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uED-u5-yIH">
-                                <rect key="frame" x="12" y="204.5" width="130" height="15"/>
+                                <rect key="frame" x="12" y="287.5" width="130" height="15"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vug-bc-x9b" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                <rect key="frame" x="12" y="102" width="322" height="90.5"/>
+                                <rect key="frame" x="12" y="92" width="346" height="165.5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="hE7-Hc-wTP"/>
                                 </constraints>
@@ -49,27 +49,35 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CoC-gk-c3v">
-                                <rect key="frame" x="12" y="69" width="322" height="21"/>
+                                <rect key="frame" x="12" y="67" width="346" height="20"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="pkj-pc-dnL"/>
+                                    <constraint firstAttribute="height" constant="20" id="pkj-pc-dnL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="备注:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9gs-M0-rje">
+                                <rect key="frame" x="12" y="263" width="30.5" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="uED-u5-yIH" firstAttribute="leading" secondItem="Vug-bc-x9b" secondAttribute="leading" id="3rt-fL-xAx"/>
-                            <constraint firstItem="Vug-bc-x9b" firstAttribute="top" secondItem="CoC-gk-c3v" secondAttribute="bottom" constant="12" id="5jT-eV-guO"/>
+                            <constraint firstItem="Vug-bc-x9b" firstAttribute="top" secondItem="CoC-gk-c3v" secondAttribute="bottom" constant="5" id="5jT-eV-guO"/>
                             <constraint firstItem="Vug-bc-x9b" firstAttribute="leading" secondItem="VbS-Gq-acs" secondAttribute="leading" id="8Lk-fz-1vC"/>
                             <constraint firstAttribute="bottom" secondItem="uED-u5-yIH" secondAttribute="bottom" constant="12" id="Cs8-CC-CLJ"/>
                             <constraint firstItem="VbS-Gq-acs" firstAttribute="leading" secondItem="w4B-bk-YD5" secondAttribute="leading" constant="12" id="DuJ-yI-W28"/>
                             <constraint firstItem="CoC-gk-c3v" firstAttribute="centerX" secondItem="w4B-bk-YD5" secondAttribute="centerX" id="F7d-cY-RbN"/>
                             <constraint firstAttribute="trailing" secondItem="Vug-bc-x9b" secondAttribute="trailing" constant="12" id="Mch-Yd-5xh"/>
                             <constraint firstItem="Ll4-gg-Esu" firstAttribute="top" secondItem="VbS-Gq-acs" secondAttribute="bottom" constant="12" id="icj-6i-0af"/>
-                            <constraint firstItem="CoC-gk-c3v" firstAttribute="top" secondItem="Ll4-gg-Esu" secondAttribute="bottom" constant="12" id="jjq-RH-8mq"/>
-                            <constraint firstItem="uED-u5-yIH" firstAttribute="top" secondItem="Vug-bc-x9b" secondAttribute="bottom" constant="12" id="nHs-HT-ZnZ"/>
+                            <constraint firstItem="CoC-gk-c3v" firstAttribute="top" secondItem="Ll4-gg-Esu" secondAttribute="bottom" constant="10" id="jjq-RH-8mq"/>
+                            <constraint firstItem="uED-u5-yIH" firstAttribute="top" secondItem="Vug-bc-x9b" secondAttribute="bottom" constant="30" id="nHs-HT-ZnZ"/>
+                            <constraint firstItem="uED-u5-yIH" firstAttribute="top" secondItem="9gs-M0-rje" secondAttribute="bottom" constant="8.5" id="nLu-m9-agr"/>
+                            <constraint firstItem="9gs-M0-rje" firstAttribute="leading" secondItem="Vug-bc-x9b" secondAttribute="leading" id="pIm-M9-jst"/>
                             <constraint firstItem="CoC-gk-c3v" firstAttribute="leading" secondItem="Ll4-gg-Esu" secondAttribute="leading" id="pSd-Be-wzA"/>
                             <constraint firstItem="Ll4-gg-Esu" firstAttribute="leading" secondItem="VbS-Gq-acs" secondAttribute="leading" id="zPH-cJ-d6M"/>
                             <constraint firstItem="VbS-Gq-acs" firstAttribute="top" secondItem="w4B-bk-YD5" secondAttribute="top" constant="10" id="zqX-1H-vbM"/>
@@ -81,7 +89,7 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yEJ-W5-QEk">
-                        <rect key="frame" x="20" y="0.0" width="1" height="241.5"/>
+                        <rect key="frame" x="20" y="0.0" width="1" height="324.5"/>
                         <color key="backgroundColor" red="0.89019607840000003" green="0.89019607840000003" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="1" id="DPn-S4-gTE"/>
@@ -101,9 +109,10 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btn_addphoto" translatesAutoresizingMaskIntoConstraints="NO" id="r87-Hv-0QA">
-                        <rect key="frame" x="51" y="102" width="60" height="60"/>
+                        <rect key="frame" x="51" y="92" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="60" id="BmB-s0-Te8"/>
+                            <constraint firstAttribute="height" constant="60" id="OfR-gS-bQH"/>
                         </constraints>
                     </imageView>
                 </subviews>
@@ -124,11 +133,12 @@
             <connections>
                 <outlet property="contentLabel" destination="CoC-gk-c3v" id="QxI-VE-5dO"/>
                 <outlet property="nameLabel" destination="Ll4-gg-Esu" id="kKJ-t8-rXc"/>
+                <outlet property="remaskDetailLabel" destination="9gs-M0-rje" id="QqN-rt-4pd"/>
                 <outlet property="showImageView" destination="Vug-bc-x9b" id="cyL-qZ-RiT"/>
                 <outlet property="showImageviewHeithConstraint" destination="hE7-Hc-wTP" id="0kE-wZ-L0P"/>
                 <outlet property="timeLabel" destination="uED-u5-yIH" id="aGl-Z2-fLy"/>
             </connections>
-            <point key="canvasLocation" x="208.5" y="180"/>
+            <point key="canvasLocation" x="220.5" y="221.5"/>
         </tableViewCell>
     </objects>
     <resources>
