--- a/OpticalValleyUnite/Classes/UI/Home/ViewController/ReportMaster.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Home/ViewController/ReportMaster.storyboard
@@ -405,7 +405,7 @@
                                                                             </userDefinedRuntimeAttribute>
                                                                         </userDefinedRuntimeAttributes>
                                                                         <connections>
-                                                                            <action selector="urgentDegreeBtnClick:" destination="emb-JF-xJq" eventType="touchUpInside" id="CH2-JK-Y09"/>
+                                                                            <action selector="urgentDegreeBtnClick:" destination="emb-JF-xJq" eventType="touchUpInside" id="af2-fN-k1D"/>
                                                                         </connections>
                                                                     </button>
                                                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="blz-Q3-MLQ">
@@ -904,6 +904,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="SubmitBtn" destination="zzn-j2-1Ro" id="EbD-g4-MMm"/>
+                        <outlet property="UrgentMatterlow" destination="sLN-lA-k9x" id="Qpb-HA-ZX2"/>
                         <outlet property="addPhotoView" destination="kiM-Yx-aYh" id="Pjs-y2-8bl"/>
                         <outlet property="address2Label" destination="LZt-lJ-QEL" id="uob-qG-CBc"/>
                         <outlet property="addressLabel" destination="C40-vz-Ma3" id="zHw-8M-3iK"/>
