--- a/OpticalValleyUnite/Classes/UI/WorkOrder/ViewController/WorkOrder.storyboard
+++ b/OpticalValleyUnite/Classes/UI/WorkOrder/ViewController/WorkOrder.storyboard
@@ -3089,17 +3089,17 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BaE-Pc-NRb" customClass="SJAddView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                        <rect key="frame" x="12" y="45" width="390" height="128"/>
+                                        <rect key="frame" x="12" y="45" width="390" height="100"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="128" id="wKm-2E-uC8"/>
+                                            <constraint firstAttribute="height" constant="100" id="x07-Oi-Rgp"/>
                                         </constraints>
                                     </view>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Way-E1-Nd9" customClass="SJTextView">
-                                        <rect key="frame" x="12" y="191" width="390" height="128"/>
+                                        <rect key="frame" x="12" y="153" width="390" height="100"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="128" id="34a-wN-yFt"/>
+                                            <constraint firstAttribute="height" constant="100" id="34a-wN-yFt"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -3123,7 +3123,7 @@
                                     <constraint firstItem="BaE-Pc-NRb" firstAttribute="leading" secondItem="XOY-AV-Uqe" secondAttribute="leading" constant="12" id="GFC-Jm-pdg"/>
                                     <constraint firstItem="Way-E1-Nd9" firstAttribute="leading" secondItem="BaE-Pc-NRb" secondAttribute="leading" id="PPH-oP-2AM"/>
                                     <constraint firstItem="iiv-s8-vP4" firstAttribute="top" secondItem="XOY-AV-Uqe" secondAttribute="top" constant="12" id="mOA-Ig-n1P"/>
-                                    <constraint firstItem="Way-E1-Nd9" firstAttribute="top" secondItem="BaE-Pc-NRb" secondAttribute="bottom" constant="18" id="uDT-Cl-q9j"/>
+                                    <constraint firstItem="Way-E1-Nd9" firstAttribute="top" secondItem="BaE-Pc-NRb" secondAttribute="bottom" constant="8" id="uDT-Cl-q9j"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yoy-mP-cZS">
@@ -3292,10 +3292,10 @@
                                 </constraints>
                             </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="un5-Qq-dQ9" customClass="SJTextView">
-                                <rect key="frame" x="8" y="667" width="398" height="60"/>
+                                <rect key="frame" x="8" y="667" width="398" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="whl-bz-O1a"/>
+                                    <constraint firstAttribute="height" constant="40" id="whl-bz-O1a"/>
                                 </constraints>
                                 <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
