--- a/OpticalValleyUnite/Classes/UI/Home/ViewController/Home.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Home/ViewController/Home.storyboard
@@ -501,7 +501,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="104" height="89"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pxm-u7-wS5">
-                                                        <rect key="frame" x="31.666666666666657" y="15" width="40" height="40"/>
+                                                        <rect key="frame" x="32" y="15" width="40" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="Pxm-u7-wS5" secondAttribute="height" id="MXI-8A-A0k"/>
                                                             <constraint firstAttribute="height" constant="40" id="VuQ-ms-DbT"/>
@@ -543,7 +543,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="104" height="89"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lBB-EU-u7Y">
-                                                        <rect key="frame" x="31.666666666666657" y="15" width="40.000000000000028" height="40"/>
+                                                        <rect key="frame" x="32" y="15" width="40" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="A8z-F0-tDZ"/>
                                                             <constraint firstAttribute="width" secondItem="lBB-EU-u7Y" secondAttribute="height" id="Qni-Uc-4Ej"/>
@@ -582,7 +582,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="104" height="89"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZOo-HS-qIY">
-                                                        <rect key="frame" x="31.666666666666686" y="15" width="40" height="40"/>
+                                                        <rect key="frame" x="32" y="15" width="40" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="NmN-IF-zK9"/>
                                                             <constraint firstAttribute="width" secondItem="ZOo-HS-qIY" secondAttribute="height" id="pay-OK-c5M"/>
@@ -685,7 +685,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="104" height="89"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bic-If-BKO">
-                                                        <rect key="frame" x="31.666666666666657" y="15" width="40" height="40"/>
+                                                        <rect key="frame" x="32" y="15" width="40" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="Bic-If-BKO" secondAttribute="height" id="UpW-Fe-yi4"/>
                                                             <constraint firstAttribute="height" constant="40" id="ifC-jR-Q29"/>
@@ -727,7 +727,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="104" height="89"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Abl-i4-4UK">
-                                                        <rect key="frame" x="31.666666666666657" y="15" width="40.000000000000028" height="40"/>
+                                                        <rect key="frame" x="32" y="15" width="40" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="Abl-i4-4UK" secondAttribute="height" id="pdv-jy-vJs"/>
                                                             <constraint firstAttribute="height" constant="40" id="vlH-uQ-feZ"/>
@@ -869,7 +869,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="104" height="89"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9IW-bx-gEy">
-                                                        <rect key="frame" x="31.666666666666657" y="15" width="40" height="40"/>
+                                                        <rect key="frame" x="32" y="15" width="40" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="9IW-bx-gEy" secondAttribute="height" id="C1p-D8-iht"/>
                                                             <constraint firstAttribute="height" constant="40" id="gGQ-BW-gNv"/>
@@ -908,7 +908,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="104" height="89"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U7n-kL-Lbz">
-                                                        <rect key="frame" x="31.666666666666657" y="15" width="40.000000000000028" height="40"/>
+                                                        <rect key="frame" x="32" y="15" width="40" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="U7n-kL-Lbz" secondAttribute="height" id="Q37-aJ-hQT"/>
                                                             <constraint firstAttribute="height" constant="40" id="uCA-0f-72V"/>
@@ -1108,8 +1108,8 @@
                                                 <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QBz-kG-bOu">
-                                                <rect key="frame" x="135" y="25" width="0.0" height="23"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QBz-kG-bOu">
+                                                <rect key="frame" x="135" y="25" width="274" height="23"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="23" id="uD8-8K-1mb"/>
                                                 </constraints>
@@ -1528,6 +1528,7 @@
                                             <constraint firstItem="ZRU-SM-cKd" firstAttribute="centerY" secondItem="jS1-5v-3e8" secondAttribute="centerY" id="nvx-kT-nCe"/>
                                             <constraint firstItem="vdF-Cy-THg" firstAttribute="leading" secondItem="HXW-ZU-C8N" secondAttribute="trailing" constant="10" id="oqx-wY-uDX"/>
                                             <constraint firstItem="tMk-QC-Up5" firstAttribute="leading" secondItem="T3S-fX-de6" secondAttribute="leading" id="pde-Am-bBE"/>
+                                            <constraint firstAttribute="trailing" secondItem="QBz-kG-bOu" secondAttribute="trailing" constant="5" id="qsF-X3-UHT"/>
                                             <constraint firstItem="c0k-Qh-9BD" firstAttribute="leading" secondItem="T3S-fX-de6" secondAttribute="leading" id="tdp-eQ-boa"/>
                                             <constraint firstItem="Rn7-sg-nJb" firstAttribute="leading" secondItem="41v-zM-NG5" secondAttribute="leading" id="vLB-v1-otW"/>
                                             <constraint firstItem="q75-4b-qI7" firstAttribute="leading" secondItem="aTg-Yn-ytz" secondAttribute="trailing" constant="10" id="wjd-sR-xPv"/>
